# aidemo

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
ai_demo/backend/: image_gen.py  storage_management.py
ai_demo/routers/: init_app.py  ui_router.py
ai_demo/ui/: homepage.py  image_generation.py
